--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,11 @@
     
 }
 
+.fa-angle-double-down{
+    background: red;
+
+}
+
 .header video{
     width: 100%;
 }
@@ -36,10 +41,6 @@
     text-shadow: 2px 1px .5px black;
     border-top: 2px solid white;
     border-bottom: 2px solid white;
-}
-
-.header h1:hover{
-    color: cyan;
 }
 
 .fa-angle-double-down{
