--- a/css/style.css
+++ b/css/style.css
@@ -130,12 +130,40 @@
 
 #main-content{
     width: 100%;
-    height: 100vh;
+    height: 500px;
     margin: 0;
     padding: 0;
+    position: relative;
+    display: grid;
+    grid-template-columns: repeat(3, 1ft);
+    grid-template-rows: (2, 2ft);
 }
 
 #img-main{
     width: 100%;
     height: 100vh;
+}
+
+#main-content h2{
+    font-size: 4em;
+    color: white;
+    font-family: 'Lobster', cursive;
+    text-align: center;
+    margin-top: 100px;
+    position: absolute;
+    top: 0;
+    right: 550px;
+    
+}
+
+#main-content p{
+    font-size: 1em;
+    font-family: 'Hepta Slab', serif;
+    color: white;
+    letter-spacing: 1.5px;
+    position: absolute;
+    top: 200px;
+    right: 30px;
+    width: 40%;
+    
 }
