--- a/css/style.css
+++ b/css/style.css
@@ -157,13 +157,16 @@
 }
 
 #main-content p{
-    font-size: 1em;
+    font-size: 1.5em;
     font-family: 'Hepta Slab', serif;
     color: white;
-    letter-spacing: 1.5px;
+    letter-spacing: 1.2px;
+    line-height: 2;
     position: absolute;
-    top: 200px;
-    right: 30px;
-    width: 40%;
+    top: 220px;
+    left: 20%;
+    width: 60%;
+    text-align: center;
+    text-shadow: 2px 1px .5px black;
     
 }
