--- a/css/style.css
+++ b/css/style.css
@@ -176,6 +176,7 @@
     width: 100%;
     height: 100vh;
     position: relative;
+    
 }
 #section-two h2{
     font-size: 4em;
@@ -205,6 +206,7 @@
     height: 100vh;
     
 }
+
 .icons1-two{
     position: absolute;
     top: 230px;
@@ -229,5 +231,21 @@
     box-shadow:  0 0 .3px .5px white;
 }
 
+footer{
+    width: 100%;
+    height: 80px;
+    background: black;
+    margin: 0;
+    padding: 0;
+
+}
+
+footer p{
+    text-align: center;
+    font-size: 2em;
+    color: white;
+    margin: auto;
+    transform: translateY(15px);
+}
 
 
