--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@
     grid-row: repeat(300px 1ft);
     position: relative;
     background-size: cover;
+    animation: fadeIn 2s ease-in;
     
     
 }
@@ -131,10 +132,11 @@
 
 #section-one{
     width: 100%;
-    height: 500px;
+    height: 100vh;
     margin: 0;
     padding: 0;
     position: relative;
+    
     
 }
 
@@ -176,6 +178,7 @@
     width: 100%;
     height: 100vh;
     position: relative;
+    
     
 }
 #section-two h2{
@@ -246,6 +249,11 @@ footer p{
     color: white;
     margin: auto;
     transform: translateY(15px);
+}
+
+@keyframes fadeIn {
+    0%{ opacity: 0;}
+    100%{ opacity: 1;}
 }
 
 
